[package]
name = "erupt_routine_aug31"
version = "0.1.0"
edition = "2021"


[dependencies]

anyhow = "1"
bytemuck = "1.5"
cgmath    = "0.18.0"
closure = "0.3.0"
erupt = { path = "../erupt/erupt" }
image     = "0.22"
libc = "0.2.119"
memoffset = "0.5.1"
mint = "0.5.6"
nalgebra-glm = "0.17"
num       = "0.2"
num-complex = "0.4.0"
raw-window-handle = "0.3.3"
serde = "1.0.130"
simple_logger = "1.13.0"
smallvec = "1.8.0"
structopt = "0.3"
tobj      = "3.2.0"
winit     = "0.27.2"


[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }